--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -17,6 +17,7 @@
       include shared/file_input.html
       id="character_import"
       label="menu.import"
+      accept=".json,application/json"
       data_state_target="importInput"
       data_action="input->state#import"
     %}
