--- a/_includes/shared/button.html
+++ b/_includes/shared/button.html
@@ -5,7 +5,7 @@
     dark:active:border-gray-200 active:border-gray-800 active:scale-90 duration-100
     disabled:cursor-not-allowed disabled:hover:border-gray-400 dark:disabled:hover:border-gray-500
     disabled:active:scale-100 disabled:text-gray-400 dark:disabled:text-border-gray-400
-    py-1 px-2
+    py-1 px-2 min-w-24 min-h-9
     {{ include.class_names }}
   "
   aria-label="{{ include.label }}"
