--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -57,6 +57,7 @@
         states=toggle_states
         icons=toggle_icons
         data_action="multi-toggle:change->confirmation#toggle confirmation:reset@window->multi-toggle#reset"
+        class_names="min-w-24"
       %}
     </div>
   </div>
