--- a/_includes/spellcasting/item.html
+++ b/_includes/spellcasting/item.html
@@ -56,9 +56,9 @@
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     {%
       include shared/toggle.html
