--- a/_includes/shared/file_input.html
+++ b/_includes/shared/file_input.html
@@ -4,7 +4,7 @@
       text-center text-gray-900 border-2 rounded-lg border-gray-400
     dark:text-slate-200 dark:border-gray-500 hover:border-gray-800 dark:hover:border-gray-200
     dark:active:border-gray-200 active:border-gray-800 active:scale-90 duration-100
-      flex flex-col p-1
+      flex flex-col p-1 min-w-24 min-h-9
       {{ include.class_names }}
     "
     for="{{ include.id }}"
